[package]
name = "gtp-tunnel"
version = "0.1.0"
authors = ["markafarrell <mark.andrew.farrell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtp = { git = "https://github.com/markafarrell/gtp_rust.git", branch = "feature/listeners" }
clap = "2.33.3"